0.3.1 - currently working on
- [#1098] Change: Improve some function names
- [#3] Fix: Allow marker names to be the prefix of others
- [#1059] Fix: Error with strrpos in the config check
- [#953] Change: Define LF as chr(10) and use that instead of chr(10)
- [#935] Change: Add @author, @package and @subpackage tags to all PHP classes

0.3.0 - released 2007-06-01
- Fix: The config check needs to know which class to instantiate (#364)
- Code cleanup (#817)
- Feature: Allow to use a string as HTML template, allow nesting of subparts (#474)
- Fix: Remove all static calls to t3lib_pageSelect::enableFields() (#764)

0.2.6 - released 2007-04-25
- Fix: TypoScript configuration doesn't exist in class.tx_seminars_tcemain.php (#733)
- Fix: E-mails are empty if a HTML template is selected via flexforms (#710)
- Change: Cache $this->conf for plugin.seminars page-wise (#670)
- Feature: Add some benchmarking code (#395)
- Change: Removed the "This feature is new" message from the config check (#388)
- Feature: Added function to unhide temporary hidden subparts (#482)
- Fix: Crash of TYPO3 4.1 after setting plugin.tx_seminars.attendancesPID (#530)
- Fix: Crash when disabling the configuration check (#527)
- Feature: Extend the template helper class so that it also works in the BE (#523)
- Change: Added a new check function to the configuration check (#437)
- Feature: List other dates for the same event topic (#299)
- Fix: Deletion of content elements in front-end editing mode fails (#322)
- Feature: Configuration check for plugin.tx_seminars_pi1.listView (#333)
- Fix: The configuration check doesn't always recognize FE pages (#356)
- Feature: Automatic configuration check (#273)
- Fix: Conflict with direct_mail 2.1.5 (#320)

0.2.5 - released 2006-07-16
- Fix: safeguard the loading and resizing of images (#157)
- Feature: allow to intval additional piVars (#132)
- Feature: conditionally set markers without removing anything (#28)