@@ -1,4 +1,5 @@
 0.3.1 - currently working on
+- [#773] Change: Make our enableFields() wrapper use $GLOBALS['TSFE'] and a singleton cache
 - [#1098] Change: Improve some function names
 - [#3] Fix: Allow marker names to be the prefix of others
 - [#1059] Fix: Error with strrpos in the config check
